fix blast furnace JEI bounding boxes, fix missing tank extures, fix arty shell dupe, fix array out of bounds on Climbable registry, fix ParticleInstanced NPE, fix RoR number display UI